feat: new design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Daily Blogs</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/src/styles/index.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -22,8 +26,16 @@
                 Let’s log you in quickly
             </div>
             <form action="login.php" method="POST">
-                <input type="email" name="Email" placeholder="Enter Your Email" required>
-                <input type="password" name="password" placeholder="Enter your password" required>
+                <div class="input-feild">
+                    <i class="fa-regular fa-envelope fa-lg"></i>
+                    <label for="email" class="form__label">Email</label>
+                    <input type="email" name="Email" placeholder="example@abc.com" required>
+                </div>
+                <div class="input-feild">
+                    <i class="fa-solid fa-lock fa-lg"></i>
+                    <label for="password" class="form__label">Password</label>
+                    <input type="password" name="password" placeholder="Enter your password" required>
+                </div>
                 <button type="submit" class="btn">Login</button>
                 <div class="option">
                     Don’t have an account?
