--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <div class="form">
             <div class="greeting">
                 <h2>Welcome</h2>
-                Let’s log you in quickly
+                <p>Let’s log you in quickly</p>
             </div>
             <form action="login.php" method="POST">
-                <div class="input-feild">
+                <div class="input-field">
                     <i class="fa-regular fa-envelope fa-lg"></i>
                     <label for="email" class="form__label">Email</label>
                     <input type="email" name="Email" placeholder="example@abc.com" required>
                 </div>
-                <div class="input-feild">
+                <div class="input-field">
                     <i class="fa-solid fa-lock fa-lg"></i>
                     <label for="password" class="form__label">Password</label>
                     <input type="password" name="password" placeholder="Enter your password" required>
