--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -23,25 +23,25 @@
         <div class="form">
             <div class="greeting">
                 <h2>Welcome</h2>
-                Let’s log you in quickly
+                <p>Let’s Register you in quickly</p>
             </div>
             <form action="login.php" method="POST">
-                <div class="input-feild">
+                <div class="input-field">
                     <i class="fa-solid fa-user"></i>
                     <label for="name" class="form__label">Name</label>
                     <input type="text" name="name" placeholder="Enter Your Name" required>
                 </div>
-                <div class="input-feild">
+                <div class="input-field">
                     <i class="fa-regular fa-envelope fa-lg"></i>
                     <label for="email" class="form__label">Email</label>
                     <input type="email" name="Email" placeholder="Enter Your Email" required>
                 </div>
-                <div class="input-feild">
+                <div class="input-field">
                     <i class="fa-solid fa-lock fa-lg"></i>
                     <label for="password" class="form__label">Password</label>
                     <input type="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <div class="input-feild">
+                <div class="input-field">
                     <i class="fa-solid fa-lock fa-lg"></i>
                     <label for="password" class="form__label">Confirm Password</label>
                     <input type="password" name="password" placeholder="Confirm your password" required>
