--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -18,14 +18,14 @@
     <div class="parent">
         <nav>
             <ul>
-                <div class="top-icons">
+                <div class="icons top-icons">
                     <li class="home-button">
                         <a href="#">
                             <i class="fa-sharp fa-solid fa-house"></i>
                         </a>
                     </li>
                 </div>
-                <div class="middle-icons">
+                <div class="icons middle-icons">
                     <li>
                         <a href="#">
                             <i class="fa-solid fa-magnifying-glass"></i>
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                 </div>
-                <div class="bottom-icons">
+                <div class="icons bottom-icons">
                     <li>
                         <a href="#">
                             <i class="fa-solid fa-plus"></i>
@@ -49,9 +49,8 @@
                 </div>
             </ul>
         </nav>
-        <div class="divider"></div>
         <div class="main">
-                
+            <h1>LOREM IPSUM</h1>
         </div>
     </div>
 </body>
