added basic blog-wrapper

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -50,7 +50,44 @@
             </ul>
         </nav>
         <div class="main">
-            <h1>LOREM IPSUM</h1>
+            <div class="latest">
+                <div class="line"></div>
+                <h1>Latest</h1>
+            </div>
+            <div class="blog-wrapper">
+                <div class="left-div">
+                    <div class="date">
+                        31
+                        MAY
+                    </div>
+                    <div class="username-div">
+                        <h4 class="username">
+                            @its.beetoot
+                        </h4>
+                    </div>
+                </div>
+                <div class="right-div">
+                    <div class="title">
+                        <h2>The Most Useful Twitter Bots</h2>
+                    </div>
+                    <div class="blog">
+                        <div class="content">
+                            <p class="description">
+                                An open-source Twitter bot that lets you easily set reminders for public tweets. Mention "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural English when you would like to reminded of that tweet.
+                                You could say things like in 2 days or in 12 hours or next week or even in 5 years. Check out the source on Github.
+                            </p>
+                            <p class="readmore">read more . . .</p>
+                            <div class="tags">
+                                <button>#meditation</button>
+                                <button>#meditation</button>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="https://play-lh.googleusercontent.com/wIf3HtczQDjHzHuu7vezhqNs0zXAG85F7VmP7nhsTxO3OHegrVXlqIh_DWBYi86FTIGk" alt="Image">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
