--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="image">
-                            <img src="https://play-lh.googleusercontent.com/wIf3HtczQDjHzHuu7vezhqNs0zXAG85F7VmP7nhsTxO3OHegrVXlqIh_DWBYi86FTIGk" alt="Image">
+                            <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg" alt="Image">
                         </div>
                     </div>
                 </div>
