fix: navbar and home page

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -19,38 +19,37 @@
         <nav>
             <ul>
                 <div class="icons top-icons">
-                    <li class="home-button">
-                        <a href="#">
-                            <i class="fa-sharp fa-solid fa-house"></i>
+                    <li class="nav-buttons">
+                        <a href="#" class="selected">
+                            <i class="fa-solid fa-house fa-xl"></i>
+                            <p>Home</p>
                         </a>
                     </li>
-                </div>
-                <div class="icons middle-icons">
-                    <li>
+                    <li class="nav-buttons">
                         <a href="#">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                            <p>SEARCH</p>
+                            <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+                            <p>Search</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="nav-buttons">
                         <a href="#">
-                            <i class="fa-solid fa-arrow-trend-up"></i>
-                            <p>TRENDING</p>
+                            <i class="fa-solid fa-arrow-trend-up fa-xl"></i>
+                            <p>Trending</p>
                         </a>
                     </li>
                 </div>
                 <div class="icons bottom-icons">
-                    <li>
+                    <li class="nav-buttons">
                         <a href="#">
-                            <i class="fa-solid fa-plus"></i>
-                            <p>CREATE</p>
+                            <i class="fa-solid fa-plus fa-xl"></i>
+                            <p>Create</p>
                         </a>
                     </li>
                 </div>
             </ul>
         </nav>
         <div class="main">
-            <div class="latest">
+            <div class="page-title">
                 <div class="line"></div>
                 <h1>Latest</h1>
             </div>
@@ -73,8 +72,11 @@
                     <div class="blog">
                         <div class="content">
                             <p class="description">
-                                An open-source Twitter bot that lets you easily set reminders for public tweets. Mention "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural English when you would like to reminded of that tweet.
-                                You could say things like in 2 days or in 12 hours or next week or even in 5 years. Check out the source on Github.
+                                An open-source Twitter bot that lets you easily set reminders for public tweets. Mention
+                                "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural English
+                                when you would like to reminded of that tweet.
+                                You could say things like in 2 days or in 12 hours or next week or even in 5 years.
+                                Check out the source on Github.
                             </p>
                             <p class="readmore">read more . . .</p>
                             <div class="tags">
@@ -83,7 +85,8 @@
                             </div>
                         </div>
                         <div class="image">
-                            <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg" alt="Image">
+                            <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg"
+                                alt="Image">
                         </div>
                     </div>
                 </div>
