--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Blogs</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/src/styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -19,7 +19,7 @@
         <div class="heading">
             <h1>Register</h1>
         </div>
-        <img class="waves" src="/src/images/waves.png" alt="Waves">
+        <img class="waves" src="../images/waves.png" alt="Waves">
         <div class="form">
             <div class="greeting">
                 <h2>Welcome</h2>
@@ -51,7 +51,7 @@
                     Already have an account?
                     <br>
                     Login
-                    <a href="/index.html">here</a>
+                    <a href="../../index.html">here</a>
                 </div>
             </form>
         </div>
