feat: added blog page

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -78,10 +78,10 @@
                                 You could say things like in 2 days or in 12 hours or next week or even in 5 years.
                                 Check out the source on Github.
                             </p>
-                            <p class="readmore">read more . . .</p>
+                            <a class="readmore" href="./blog.html">read more . . .</a>
                             <div class="tags">
-                                <button>#meditation</button>
-                                <button>#meditation</button>
+                                <a>#meditation</a>
+                                <a>#meditation</a>
                             </div>
                         </div>
                         <div class="image">
