--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Blogs</title>
     <!-- Stylesheet -->
+    <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="../styles/home.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -16,38 +17,40 @@
 
 <body>
     <div class="parent">
-        <nav>
-            <ul>
-                <div class="icons top-icons">
-                    <li class="nav-buttons">
-                        <a href="#" class="selected">
-                            <i class="fa-solid fa-house fa-xl"></i>
-                            <p>Home</p>
-                        </a>
-                    </li>
-                    <li class="nav-buttons">
-                        <a href="#">
-                            <i class="fa-solid fa-magnifying-glass fa-xl"></i>
-                            <p>Search</p>
-                        </a>
-                    </li>
-                    <li class="nav-buttons">
-                        <a href="#">
-                            <i class="fa-solid fa-arrow-trend-up fa-xl"></i>
-                            <p>Trending</p>
-                        </a>
-                    </li>
-                </div>
-                <div class="icons bottom-icons">
-                    <li class="nav-buttons">
-                        <a href="#">
-                            <i class="fa-solid fa-plus fa-xl"></i>
-                            <p>Create</p>
-                        </a>
-                    </li>
-                </div>
-            </ul>
-        </nav>
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <div class="icons top-icons">
+                        <li class="nav-buttons">
+                            <a href="#" class="selected">
+                                <i class="fa-solid fa-house fa-xl"></i>
+                                <p>Home</p>
+                            </a>
+                        </li>
+                        <li class="nav-buttons">
+                            <a href="#">
+                                <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+                                <p>Search</p>
+                            </a>
+                        </li>
+                        <li class="nav-buttons">
+                            <a href="#">
+                                <i class="fa-solid fa-arrow-trend-up fa-xl"></i>
+                                <p>Trending</p>
+                            </a>
+                        </li>
+                    </div>
+                    <div class="icons bottom-icons">
+                        <li class="nav-buttons">
+                            <a href="#">
+                                <i class="fa-solid fa-plus fa-xl"></i>
+                                <p>Create</p>
+                            </a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
+        </div>
         <div class="main">
             <div class="page-title">
                 <div class="line"></div>
