added hrefs and search page

--- a/src/pages/trending.html
+++ b/src/pages/trending.html
@@ -22,7 +22,7 @@
                 <ul>
                     <div class="icons top-icons">
                         <li class="nav-buttons">
-                            <a href="home.html" class="selected">
+                            <a href="home.html">
                                 <i class="fa-solid fa-house fa-xl"></i>
                                 <p>Home</p>
                             </a>
@@ -34,7 +34,7 @@
                             </a>
                         </li>
                         <li class="nav-buttons">
-                            <a href="trending.html">
+                            <a href="trending.html" class="selected">
                                 <i class="fa-solid fa-arrow-trend-up fa-xl"></i>
                                 <p>Trending</p>
                             </a>
@@ -54,7 +54,7 @@
         <div class="main">
             <div class="page-title">
                 <div class="line"></div>
-                <h1>Latest</h1>
+                <h1>Trending</h1>
             </div>
             <div class="blog-wrapper">
                 <div class="left-div">
