--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -29,13 +29,13 @@
                             </a>
                         </li>
                         <li class="nav-buttons">
-                            <a href="#">
+                            <a href="search.html">
                                 <i class="fa-solid fa-magnifying-glass fa-xl"></i>
                                 <p>Search</p>
                             </a>
                         </li>
                         <li class="nav-buttons">
-                            <a href="#">
+                            <a href="trending.html">
                                 <i class="fa-solid fa-arrow-trend-up fa-xl"></i>
                                 <p>Trending</p>
                             </a>
