--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -8,7 +8,7 @@
     <title>Daily Blogs</title>
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../styles/navbar.css">
-    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="../styles/search.css ">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -22,13 +22,13 @@
                 <ul>
                     <div class="icons top-icons">
                         <li class="nav-buttons">
-                            <a href="home.html" class="selected">
+                            <a href="home.html">
                                 <i class="fa-solid fa-house fa-xl"></i>
                                 <p>Home</p>
                             </a>
                         </li>
                         <li class="nav-buttons">
-                            <a href="search.html">
+                            <a href="search.html" class="selected">
                                 <i class="fa-solid fa-magnifying-glass fa-xl"></i>
                                 <p>Search</p>
                             </a>
@@ -52,47 +52,15 @@
             </nav>
         </div>
         <div class="main">
+            <div class="search-button">
+                <form action="search.php">
+                    <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+                    <input type="search" placeholder="search . . .">
+                </form>
+            </div>
             <div class="page-title">
                 <div class="line"></div>
-                <h1>Latest</h1>
-            </div>
-            <div class="blog-wrapper">
-                <div class="left-div">
-                    <div class="date">
-                        31
-                        MAY
-                    </div>
-                    <div class="username-div">
-                        <h4 class="username">
-                            @its.beetoot
-                        </h4>
-                    </div>
-                </div>
-                <div class="right-div">
-                    <div class="title">
-                        <h2>The Most Useful Twitter Bots</h2>
-                    </div>
-                    <div class="blog">
-                        <div class="content">
-                            <p class="description">
-                                An open-source Twitter bot that lets you easily set reminders for public tweets. Mention
-                                "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural English
-                                when you would like to reminded of that tweet.
-                                You could say things like in 2 days or in 12 hours or next week or even in 5 years.
-                                Check out the source on Github.
-                            </p>
-                            <a class="readmore" href="./blog.html">read more . . .</a>
-                            <div class="tags">
-                                <a>#meditation</a>
-                                <a>#meditation</a>
-                            </div>
-                        </div>
-                        <div class="image">
-                            <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg"
-                                alt="Image">
-                        </div>
-                    </div>
-                </div>
+                <h1>Search Results</h1>
             </div>
         </div>
     </div>
