feat: added new search page, new styles
Co-authored-by: Beetroot16 <Beetroot16@users.noreply.github.com>

--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="icons bottom-icons">
                         <li class="nav-buttons">
-                            <a href="#">
+                            <a href="create.html">
                                 <i class="fa-solid fa-plus fa-xl"></i>
                                 <p>Create</p>
                             </a>
