--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="icons bottom-icons">
                         <li class="nav-buttons">
-                            <a href="#">
+                            <a href="create.html">
                                 <i class="fa-solid fa-plus fa-xl"></i>
                                 <p>Create</p>
                             </a>
@@ -75,11 +75,14 @@
                     <div class="blog">
                         <div class="content">
                             <p class="description">
-                                An open-source Twitter bot that lets you easily set reminders for public tweets. Mention
+                                An open-source Twitter bot that lets you easily set reminders for public tweets.
+                                Mention
                                 "@RemindMe_OfThis" in the reply of any tweet and specify the time in natural English
                                 when you would like to reminded of that tweet.
                                 You could say things like in 2 days or in 12 hours or next week or even in 5 years.
                                 Check out the source on Github.
+                                An open-source Twitter bot that lets you easily set reminders for public tweets.
+                                Mention
                             </p>
                             <a class="readmore" href="./blog.html">read more . . .</a>
                             <div class="tags">
