--- a/src/pages/create.html
+++ b/src/pages/create.html
@@ -54,7 +54,16 @@
         <div class="main">
             <div class="page-title">
                 <div class="line"></div>
-                <h1>Write your own Blog</h1>
+                <h1>Create</h1>
+            </div>
+            <div class="details">
+                <form action="search.php" method="POST">
+                    <div class="input">
+                        <div class="input-field">
+                            <input type="email" name="Email" placeholder="Write your title here . . ." required>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
